# symbiont-cli

./: .gitignore  README.md  pyproject.toml
symbiont_cli/: main.py  qdrant.py  reset_vectors.py
tests/: test_parse_arguments.py  test_symbiont_cli.py
