[tool.poetry]
name = "symbiont-cli"
version = "0.1.0"
description = ""
authors = ["lonehegelian <thelonehegelian@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-chroma = "^0.1.4"
langchain = "^0.3.0"
langchain-core = "^0.3.5"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
pypdf = "^5.0.0"
pymupdf = "^1.24.10"
sentence-transformers = "^3.1.1"
langchain-qdrant = "^0.1.4"
pdfplumber = "^0.11.4"
langchain-llm = "^0.4.15"
unstructured = {extras = ["pdf"], version = "^0.15.13"}
libmagic = "^1.0"
python-magic = "^0.4.27"
colorama = "^0.4.6"
langchainhub = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"